2004-03-19  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (install-exec-clean): Don't remove libgettextlib.a on
	AIX.
	Reported by Kouichi Hashikawa <z01a7ksy@cs.ecip.tohoku.ac.jp>.

2004-03-08  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.c (compile_csharp_using_sscli): Test whether csc is not
	the chicken scheme's 'csc' compiler.
	Reported by Colin Marquardt <colin@marquardt-home.de>.

2004-02-07  Bruno Haible  <bruno@clisp.org>

	* xalloc.h (xalloc_oversized): New macro, from gnulib.
	* quotearg.h: New file, from gnulib.
	* quotearg.c: New file, from gnulib.
	* sh-quote.c: Include quotearg.h.
	(sh_quoting_options): New variable.
	(init_sh_quoting_options): New function.
	(shell_quote_length, shell_quote_copy, shell_quote): Rewrite to use
	quotearg.
	* Makefile.am (libgettextlib_la_SOURCES): Add quotearg.h, quotearg.c.
	* Makefile.msvc (OBJECTS): Add quotearg.obj.
	(quotearg.obj): New rule.
	* Makefile.vms (OBJECTS): Add quotearg.obj.
	(quotearg.obj): New rule.

2004-02-06  Bruno Haible  <bruno@clisp.org>

	* allocsa.h (sa_alignof): Define differently with HP-UX cc, to avoid
	a bug of this cc on HP-UX 10.20 dealing with enums.
	Reported by Christopher Seip <chris.seip@hp.com>.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* pipe.c: New file, synthesis of pipe-in.c, pipe-out.c, pipe-bidi.c.
	* pipe-in.c: Remove file.
	* pipe-out.c: Remove file.
	* pipe-bidi.c: Remove file.
	* Makefile.am (libgettextlib_la_SOURCES): Add pipe.c, Remove pipe-in.c,
	pipe-out.c, pipe-bidi.c.
	* Makefile.msvc (OBJECTS): Add pipe.obj. Remove pipe-in.obj,
	pipe-out.obj, pipe-bidi.obj.
	(pipe.obj): New rule.
	(pipe-in.obj, pipe-out.obj, pipe-bidi.obj): Remove rules.
	* Makefile.vms (OBJECTS): Add pipe.obj. Remove pipe-in.obj,
	pipe-out.obj, pipe-bidi.obj.
	(pipe.obj): New rule.
	(pipe-in.obj, pipe-out.obj, pipe-bidi.obj): Remove rules.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.
